Ajustes no cadastro de pessoa